--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -1,3 +1,48 @@
+.font-awesome-picker .input.selected-code {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.font-awesome-picker .input.search {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-radius: initial initial 0 0;
+  font-size: 0.75rem;
+}
+.font-awesome-picker .selected {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem 0;
+  gap: 0.75rem 0.5rem;
+}
+.font-awesome-picker .selected i {
+  font-size: 2.5rem;
+  padding: 0.25rem;
+}
+.font-awesome-picker .icons-preview {
+  display: grid;
+  grid-template-columns: repeat(8, auto);
+  grid-template-rows: repeat(2, auto);
+  width: 100%;
+  margin-top: 0.75rem;
+  gap: 0.75rem 0.5rem;
+}
+.font-awesome-picker .icons-preview .icon-tile {
+  cursor: pointer;
+  font-size: 1.5rem;
+  padding: 0.25rem;
+  border-radius: 0.25rem;
+}
+.font-awesome-picker .icons-preview .icon-tile:hover {
+  background: rgba(0, 0, 0, 0.1333333333);
+}
+.font-awesome-picker .no-result {
+  grid-column-end: span 8;
+  grid-row-end: span 2;
+  place-self: center;
+}
+
 @font-face {
   font-family: "Montserrat";
   src: url("../fonts/Montserrat-Thin.ttf") format("truetype");
@@ -106,6 +151,342 @@
   font-weight: 900;
   font-style: italic;
 }
+.has-text-white {
+  color: hsl(0deg, 0%, 100%) !important;
+}
+
+a.has-text-white:hover, a.has-text-white:focus {
+  color: #e6e6e6 !important;
+}
+
+.has-background-white {
+  background-color: hsl(0deg, 0%, 100%) !important;
+}
+
+.has-text-black {
+  color: hsl(0deg, 0%, 4%) !important;
+}
+
+a.has-text-black:hover, a.has-text-black:focus {
+  color: black !important;
+}
+
+.has-background-black {
+  background-color: hsl(0deg, 0%, 4%) !important;
+}
+
+.has-text-light {
+  color: hsl(0deg, 0%, 96%) !important;
+}
+
+a.has-text-light:hover, a.has-text-light:focus {
+  color: #dbdbdb !important;
+}
+
+.has-background-light {
+  background-color: hsl(0deg, 0%, 96%) !important;
+}
+
+.has-text-dark {
+  color: hsl(0deg, 0%, 21%) !important;
+}
+
+a.has-text-dark:hover, a.has-text-dark:focus {
+  color: #1c1c1c !important;
+}
+
+.has-background-dark {
+  background-color: hsl(0deg, 0%, 21%) !important;
+}
+
+.has-text-primary {
+  color: hsl(171deg, 100%, 41%) !important;
+}
+
+a.has-text-primary:hover, a.has-text-primary:focus {
+  color: #009e86 !important;
+}
+
+.has-background-primary {
+  background-color: hsl(171deg, 100%, 41%) !important;
+}
+
+.has-text-primary-light {
+  color: #ebfffc !important;
+}
+
+a.has-text-primary-light:hover, a.has-text-primary-light:focus {
+  color: #b8fff4 !important;
+}
+
+.has-background-primary-light {
+  background-color: #ebfffc !important;
+}
+
+.has-text-primary-dark {
+  color: #00947e !important;
+}
+
+a.has-text-primary-dark:hover, a.has-text-primary-dark:focus {
+  color: #00c7a9 !important;
+}
+
+.has-background-primary-dark {
+  background-color: #00947e !important;
+}
+
+.has-text-link {
+  color: hsl(229deg, 53%, 53%) !important;
+}
+
+a.has-text-link:hover, a.has-text-link:focus {
+  color: #3449a8 !important;
+}
+
+.has-background-link {
+  background-color: hsl(229deg, 53%, 53%) !important;
+}
+
+.has-text-link-light {
+  color: #eff1fa !important;
+}
+
+a.has-text-link-light:hover, a.has-text-link-light:focus {
+  color: #c8cfee !important;
+}
+
+.has-background-link-light {
+  background-color: #eff1fa !important;
+}
+
+.has-text-link-dark {
+  color: #3850b7 !important;
+}
+
+a.has-text-link-dark:hover, a.has-text-link-dark:focus {
+  color: #576dcb !important;
+}
+
+.has-background-link-dark {
+  background-color: #3850b7 !important;
+}
+
+.has-text-info {
+  color: hsl(207deg, 61%, 53%) !important;
+}
+
+a.has-text-info:hover, a.has-text-info:focus {
+  color: #2b74b1 !important;
+}
+
+.has-background-info {
+  background-color: hsl(207deg, 61%, 53%) !important;
+}
+
+.has-text-info-light {
+  color: #eff5fb !important;
+}
+
+a.has-text-info-light:hover, a.has-text-info-light:focus {
+  color: #c6ddf1 !important;
+}
+
+.has-background-info-light {
+  background-color: #eff5fb !important;
+}
+
+.has-text-info-dark {
+  color: #296fa8 !important;
+}
+
+a.has-text-info-dark:hover, a.has-text-info-dark:focus {
+  color: #368ace !important;
+}
+
+.has-background-info-dark {
+  background-color: #296fa8 !important;
+}
+
+.has-text-success {
+  color: hsl(153deg, 53%, 53%) !important;
+}
+
+a.has-text-success:hover, a.has-text-success:focus {
+  color: #34a873 !important;
+}
+
+.has-background-success {
+  background-color: hsl(153deg, 53%, 53%) !important;
+}
+
+.has-text-success-light {
+  color: #effaf5 !important;
+}
+
+a.has-text-success-light:hover, a.has-text-success-light:focus {
+  color: #c8eedd !important;
+}
+
+.has-background-success-light {
+  background-color: #effaf5 !important;
+}
+
+.has-text-success-dark {
+  color: #257953 !important;
+}
+
+a.has-text-success-dark:hover, a.has-text-success-dark:focus {
+  color: #31a06e !important;
+}
+
+.has-background-success-dark {
+  background-color: #257953 !important;
+}
+
+.has-text-warning {
+  color: hsl(44deg, 100%, 77%) !important;
+}
+
+a.has-text-warning:hover, a.has-text-warning:focus {
+  color: #ffd257 !important;
+}
+
+.has-background-warning {
+  background-color: hsl(44deg, 100%, 77%) !important;
+}
+
+.has-text-warning-light {
+  color: #fffaeb !important;
+}
+
+a.has-text-warning-light:hover, a.has-text-warning-light:focus {
+  color: #ffecb8 !important;
+}
+
+.has-background-warning-light {
+  background-color: #fffaeb !important;
+}
+
+.has-text-warning-dark {
+  color: #946c00 !important;
+}
+
+a.has-text-warning-dark:hover, a.has-text-warning-dark:focus {
+  color: #c79200 !important;
+}
+
+.has-background-warning-dark {
+  background-color: #946c00 !important;
+}
+
+.has-text-danger {
+  color: hsl(348deg, 86%, 61%) !important;
+}
+
+a.has-text-danger:hover, a.has-text-danger:focus {
+  color: #ee1742 !important;
+}
+
+.has-background-danger {
+  background-color: hsl(348deg, 86%, 61%) !important;
+}
+
+.has-text-danger-light {
+  color: #feecf0 !important;
+}
+
+a.has-text-danger-light:hover, a.has-text-danger-light:focus {
+  color: #fabdc9 !important;
+}
+
+.has-background-danger-light {
+  background-color: #feecf0 !important;
+}
+
+.has-text-danger-dark {
+  color: #cc0f35 !important;
+}
+
+a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
+  color: #ee2049 !important;
+}
+
+.has-background-danger-dark {
+  background-color: #cc0f35 !important;
+}
+
+.has-text-black-bis {
+  color: hsl(0deg, 0%, 7%) !important;
+}
+
+.has-background-black-bis {
+  background-color: hsl(0deg, 0%, 7%) !important;
+}
+
+.has-text-black-ter {
+  color: hsl(0deg, 0%, 14%) !important;
+}
+
+.has-background-black-ter {
+  background-color: hsl(0deg, 0%, 14%) !important;
+}
+
+.has-text-grey-darker {
+  color: hsl(0deg, 0%, 21%) !important;
+}
+
+.has-background-grey-darker {
+  background-color: hsl(0deg, 0%, 21%) !important;
+}
+
+.has-text-grey-dark {
+  color: hsl(0deg, 0%, 29%) !important;
+}
+
+.has-background-grey-dark {
+  background-color: hsl(0deg, 0%, 29%) !important;
+}
+
+.has-text-grey {
+  color: hsl(0deg, 0%, 48%) !important;
+}
+
+.has-background-grey {
+  background-color: hsl(0deg, 0%, 48%) !important;
+}
+
+.has-text-grey-light {
+  color: hsl(0deg, 0%, 71%) !important;
+}
+
+.has-background-grey-light {
+  background-color: hsl(0deg, 0%, 71%) !important;
+}
+
+.has-text-grey-lighter {
+  color: hsl(0deg, 0%, 86%) !important;
+}
+
+.has-background-grey-lighter {
+  background-color: hsl(0deg, 0%, 86%) !important;
+}
+
+.has-text-white-ter {
+  color: hsl(0deg, 0%, 96%) !important;
+}
+
+.has-background-white-ter {
+  background-color: hsl(0deg, 0%, 96%) !important;
+}
+
+.has-text-white-bis {
+  color: hsl(0deg, 0%, 98%) !important;
+}
+
+.has-background-white-bis {
+  background-color: hsl(0deg, 0%, 98%) !important;
+}
+
 /*COLORS FROM FLAT UI COLOR PALETTE 1*/
 /*COLORS FROM SEMANTIC UI REACT BUTTONS*/
 /*3 COLORS THEME*/
@@ -153,7 +534,7 @@
 
 .page-sidemenu {
   display: grid;
-  gap: 32px;
+  gap: 2rem;
   grid-template-columns: minmax(256px, auto) 1fr;
 }
 
@@ -162,7 +543,7 @@
 }
 
 .home-container .home-card {
-  padding-right: 32px;
+  padding-right: 2rem;
   grid-template-columns: auto 1fr;
   grid-template-rows: auto 1fr;
   gap: 0 1.5em;
@@ -221,7 +602,7 @@
 }
 .need-activation-container > .message > .message-body {
   display: flex;
-  padding: 32px;
+  padding: 2rem;
   flex-direction: column;
   justify-items: center;
   align-items: center;
@@ -255,7 +636,6 @@
   border-radius: 0.25rem;
   display: flex;
   flex-direction: row;
-  padding-right: 1rem;
   align-items: center;
   justify-content: space-between;
 }
@@ -272,16 +652,15 @@
   background-color: rgba(0, 0, 0, 0.031372549);
 }
 .page-and-subs-wrapper .subs {
-  margin-left: 0.4rem;
+  margin-left: 0.5rem;
   padding-left: 0.75rem;
   border-left: 1px solid rgba(0, 0, 0, 0.2666666667);
 }
 
 .structure-row-wrapper {
-  background-color: hsl(0deg, 0%, 100%);
   border-radius: 0.25rem;
   padding: 1rem 2rem 1rem 1rem;
-  border-left: 0.4rem solid #3498db;
+  border-left: 0.4rem solid hsl(171deg, 100%, 41%);
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto auto;
@@ -329,7 +708,6 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 1rem;
   cursor: pointer;
 }
 .layout-picker .layout-tile:hover {
@@ -367,7 +745,14 @@
 }
 
 .box {
-  margin: 1.5rem 0.5rem;
+  margin: 0.5rem;
+}
+.box:not(:last-child) {
+  margin-bottom: 0.5rem;
+}
+
+.column {
+  padding: 0.25rem !important;
 }
 
 /*COLORS FROM FLAT UI COLOR PALETTE 1*/
@@ -652,11 +1037,11 @@ ul, li {
 }
 
 .padded {
-  padding: 3rem 2rem 3rem 4rem;
+  padding: 2rem 1.5rem 2rem 2.5rem;
 }
 
 .margined {
-  margin: 3rem 2rem 3rem 4rem;
+  margin: 2rem 1.5rem 2rem 2.5rem;
 }
 
 .margined-auto {
