--- a/client/css/scss/_layout.scss
+++ b/client/css/scss/_layout.scss
@@ -1,4 +1,5 @@
 @import '../../../node_modules/bulma/sass/utilities/initial-variables.sass';
+@import '../../../node_modules/bulma/sass/helpers/color.sass';
 @import 'variables';
 
 .landing-container{
@@ -39,7 +40,7 @@
 }
 .page-sidemenu{
     display: grid;
-    gap:32px;
+    gap:2rem;
     grid-template-columns: minmax(256px,auto) 1fr;
 }
 .side-menu-container{
@@ -47,7 +48,7 @@
 }
 .home-container{
     & .home-card{
-        padding-right: 32px;
+        padding-right: 2rem;
         grid-template-columns: auto 1fr;
         grid-template-rows: auto 1fr;
         gap: 0 1.5em;
@@ -102,7 +103,7 @@
         place-self: center;
         & > .message-body {
             display: flex;
-            padding: 32px;
+            padding: 2rem;
             flex-direction: column;
             justify-items: center;
             align-items: center;
@@ -136,7 +137,6 @@
         border-radius: .25rem;
         display: flex;
         flex-direction: row;
-        padding-right: 1rem ;
         align-items: center;
         justify-content: space-between;
         .page-row-content{
@@ -153,16 +153,15 @@
         }
     }
     .subs{
-        margin-left: .4rem ;
+        margin-left: .5rem ;
         padding-left: .75rem;
         border-left: 1px solid #0004;
     }
 }
 .structure-row-wrapper{
-    background-color: hsl(0deg,0%,100%);
     border-radius: .25rem;
     padding: 1rem 2rem 1rem 1rem;
-    border-left: .4rem solid $flat-blue-light;
+    border-left: .4rem solid $primary;
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: auto auto;
@@ -210,7 +209,6 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        gap: 1rem;
         cursor: pointer;
         &:hover{
             background-color: hsl(0deg,0%,100%);
@@ -250,5 +248,11 @@
     }
 }
 .box {
-    margin: 1.5rem .5rem;
-  }
+    margin: .5rem;
+    &:not(:last-child){
+        margin-bottom: .5rem;
+    }
+}
+.column {
+    padding: 0.25rem !important;
+}
