--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -744,15 +744,29 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   margin-bottom: 1rem;
 }
 
-.box {
-  margin: 0.5rem;
+.box, .panel {
+  margin: 0 0.5rem 0.5rem 0.5rem;
 }
-.box:not(:last-child) {
+.box:not(:last-child), .panel:not(:last-child) {
   margin-bottom: 0.5rem;
 }
 
 .column {
   padding: 0.25rem !important;
+}
+
+.tabs.vertical ul {
+  flex-direction: column;
+  border-bottom: none;
+  border-right: 1px solid hsl(229deg, 53%, 53%);
+}
+.tabs.vertical ul li {
+  width: 100%;
+  display: flex;
+}
+.tabs.vertical ul li a {
+  justify-content: stretch;
+  border: none;
 }
 
 /*COLORS FROM FLAT UI COLOR PALETTE 1*/
@@ -920,14 +934,6 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
   background: #34495e;
-}
-
-.modal-card-body {
-  display: grid;
-}
-
-.modal-card-body > * {
-  place-self: center;
 }
 
 body {
