--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -939,7 +939,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
-  background-image: linear-gradient(315deg, #f1dfd1 0%, #f6f0ea 74%);
+  background-image: linear-gradient(315deg, #e9eaf7 0%, #f6f0ea 74%);
   background-attachment: fixed;
   min-height: 100vh;
   min-width: 100vw;
@@ -1338,6 +1338,10 @@ ul, li {
   animation-name: bounce;
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
+}
+
+input.checkbox {
+  margin: 0 0.5rem;
 }
 
 /*COLORS FROM FLAT UI COLOR PALETTE 1*/
