--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -492,23 +492,12 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 /*3 COLORS THEME*/
 /*SELECTED COLORS*/
 .landing-container {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
   width: 100vw;
   height: 100vh;
-}
-.landing-container .form-container {
-  background-color: rgba(68, 68, 136, 0.1);
-  place-self: stretch;
-  display: grid;
-}
-.landing-container .form-container .form {
-  place-self: center;
-  display: grid;
-  gap: 1rem;
-}
-.landing-container img {
-  place-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-container-navbar {
@@ -974,6 +963,14 @@ ul, li {
   max-height: 100vh;
   min-height: 100vh;
   height: 100vh;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.children-spaced > * {
+  margin-bottom: 1rem;
 }
 
 .text-light p,
