--- a/client/css/scss/_layout.scss
+++ b/client/css/scss/_layout.scss
@@ -3,23 +3,13 @@
 @import 'variables';
 
 .landing-container{
-    display:grid;
-    grid-template-columns: 1fr 3fr;
     width: 100vw;
     height: 100vh;
-    & .form-container{
-        background-color: rgba(#448,.1);
-        place-self: stretch;
-        display: grid;
-        & .form{
-            place-self: center;
-            display: grid;
-            gap:1rem
-        }
-    }
-    & img{
-        place-self: center;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
 }
 .main-container-navbar{
     display: block;
