--- a/client/css/scss/_main.scss
+++ b/client/css/scss/_main.scss
@@ -52,6 +52,12 @@ ul,li { margin:0; padding:0; }
     min-height: 100vh;
     height: 100vh;
 }
+.text-center{
+    text-align: center;
+}
+.children-spaced > *{
+    margin-bottom:1rem;
+}
 .text-light p,
 .text-light h1,
 .text-light h2,
