--- a/client/css/scss/_layout.scss
+++ b/client/css/scss/_layout.scss
@@ -22,7 +22,15 @@
     height: 100%;
 }
 .main-content{
-    margin-left: 5rem;
+    padding-top: 4rem;
+}
+@media screen and (min-width : 56rem) {
+    .main-content{
+        padding-top: unset;
+        padding-left: 5rem;
+    }
+}
+.main-content{
     height: 100%;
 }
 .page{
@@ -58,6 +66,7 @@
     }
     & .cmp-title-container{
         margin:auto;
+        text-align: center;
         & .cmp-title{
             font-family: "Montserrat", sans-serif;
             font-weight: 900;
@@ -67,8 +76,6 @@
             -webkit-text-fill-color: transparent;
             -webkit-background-clip: text;
             font-size: 2rem;
-            margin: 1rem;
-            padding: 0 2rem;
             color:transparent;
         }
     }
