--- a/client/css/scss/_variables.scss
+++ b/client/css/scss/_variables.scss
@@ -103,3 +103,26 @@ $full-white:#fff;
 $full-black:#000;
 $navbar-arrow-one:#0002;
 $navbar-arrow-two:#0006;
+
+//$gradient-theme-bg: linear-gradient(315deg, #e9eaf7 0%, #f6f0ea 74%); // PICK WHITE TO LIGHT BLEU
+//$gradient-theme-bg: linear-gradient(315deg, #f1dfd1 0%, #f6f0ea 74%); // PEACH TO WHITE
+//$gradient-theme-bg: linear-gradient(315deg, #bdd4e7 0%, #8693ab 74%); // BLEU GREY DARK TO LIGHT
+//$gradient-theme-bg: linear-gradient(315deg, #7f5a83 0%, #0d324d 74%); // BLEU TO VIOLET DISNEY
+//$gradient-theme-bg: linear-gradient(315deg, #ebbe9b 0%, #e7a977 74%); // ORANGE TO JAUNE ROI LION
+//$gradient-theme-bg: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
+//$gradient-theme-bg: linear-gradient(315deg, #f9d29d 0%, #ffd8cb 74%); // PEACH TO YELLOW CHILL
+$bg-color: hsl(42, 60%, 94%);
+
+/*$primary: #deb75f;
+$theme-bg: #325a5d;
+$theme-panel: #2e5557;
+$theme-text: #ecf0f1;
+$theme-full: #fff;
+$theme-opposite: #34495e;
+$theme-full-opposite: #000;*/
+
+/*
+    primary (golg): #deb75f
+    back: #2e5557
+    back-light : #325a5d
+*/
