--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -673,10 +673,11 @@ $theme-full-opposite: #000;*/
   display: grid;
   grid-template-columns: auto;
   grid-template-rows: auto auto;
+  gap: 1rem;
   align-content: center;
 }
 .structure-row-wrapper .fa {
-  font-size: 2.5rem;
+  font-size: 3rem;
 }
 .structure-row-wrapper .dropdown {
   align-items: center;
@@ -961,7 +962,21 @@ $theme-full-opposite: #000;*/
   background: #34495e;
 }
 
+/* Avoid Chrome to see Safari hack */
+@supports (-webkit-touch-callout: none) {
+  body {
+    /* The hack for Safari */
+    min-height: -webkit-fill-available;
+  }
+}
+html {
+  height: -webkit-fill-available;
+}
+
 body {
+  padding: 0;
+  margin: 0;
+  min-height: 100vh;
   margin: 0;
   font-family: "Montserrat", sans-serif;
   background-color: hsl(42deg, 60%, 94%);
@@ -972,7 +987,7 @@ body {
 }
 
 #app {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 i {
@@ -1076,11 +1091,11 @@ ul, li {
 }
 
 .padded {
-  padding: 2rem 1.5rem 2rem 2.5rem;
+  padding: 2rem 1.5rem;
 }
 
 .margined {
-  margin: 2rem 1.5rem 2rem 2.5rem;
+  margin: 2rem 1.5rem;
 }
 
 .margined-auto {
@@ -1403,12 +1418,12 @@ $theme-full-opposite: #000;*/
 }
 .navbar hr {
   text-align: center;
-  width: 70%;
-  margin: auto;
+  background-color: #2c3e50;
+  border: 1px solid #2c3e50;
+  width: 30%;
   align-self: center;
 }
 .navbar .navbar-nav {
-  min-height: 4rem;
   padding: 0;
   margin: 0;
   list-style: none;
@@ -1418,21 +1433,21 @@ $theme-full-opposite: #000;*/
 .navbar .navbar-nav.navbar-logo {
   box-shadow: 0 0 0.5rem 0.25rem rgba(0, 0, 0, 0.1333333333);
   display: flex;
+  min-height: 4rem;
   width: 100vw;
   justify-content: space-between;
   flex-shrink: 1;
   flex-direction: row;
 }
-.navbar .navbar-nav.navbar-home {
+.navbar .navbar-nav.navbar-home.hide {
+  padding: 1rem 0;
+  overflow-y: auto;
   flex-shrink: 1;
-}
-.navbar .navbar-nav.navbar-pages {
-  flex-shrink: 1;
-}
-.navbar .navbar-nav.navbar-admin {
   flex-grow: 1;
 }
 .navbar .navbar-nav.navbar-logout {
+  margin-top: auto;
+  box-shadow: 0 0 0.5rem 0.25rem rgba(0, 0, 0, 0.1333333333);
   flex-shrink: 1;
 }
 .navbar .navbar-nav.navbar-expanded {
@@ -1489,20 +1504,19 @@ $theme-full-opposite: #000;*/
   color: #34495e;
 }
 .navbar.expanded {
-  height: 100vh;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   width: 100vw;
+  height: 100vh;
 }
 .navbar.expanded .navbar-nav {
   display: flex;
 }
-.navbar.expanded .navbar-nav.hide {
-  padding-top: 1rem;
-}
-.navbar.expanded .navbar-nav .nav-item {
-  height: 4rem;
-}
 .navbar.expanded hr {
-  display: unset;
+  margin: 1rem 0;
 }
 .navbar.expanded .link-text {
   display: block !important;
@@ -1588,7 +1602,6 @@ $theme-full-opposite: #000;*/
 
 @media screen and (min-width: 56rem) {
   .navbar {
-    padding-bottom: 0.5rem;
     height: 100%;
     width: 5rem;
     transition: width 500ms ease;
@@ -1621,7 +1634,7 @@ $theme-full-opposite: #000;*/
   }
   .navbar hr {
     display: block !important;
-    margin: 0.5rem 0;
+    margin: 1.5rem 0;
   }
   .navbar:hover {
     width: 16rem;
