--- a/client/css/scss/_main.scss
+++ b/client/css/scss/_main.scss
@@ -19,7 +19,20 @@
 .modal-card-body {
 }
 //OVERIDES
-body{
+/* Avoid Chrome to see Safari hack */
+@supports (-webkit-touch-callout: none) {
+    body {
+      /* The hack for Safari */
+      min-height: -webkit-fill-available;
+    }
+  }
+html {
+    height: -webkit-fill-available;
+}
+body {
+    padding: 0;
+    margin: 0;
+    min-height: 100vh;
     margin:0;
     font-family: 'Montserrat', sans-serif;
     background-color: $bg-color;
@@ -29,7 +42,7 @@ body{
     color:$text !important;
 }
 #app{
-    height:100vh;
+    min-height:100vh;
 }
 i {
     font-style: normal;
@@ -107,11 +120,11 @@ ul,li { margin:0; padding:0; }
 }
 
 .padded{
-    padding: 2rem 1.5rem 2rem 2.5rem;
+    padding: 2rem 1.5rem;
 }
 
 .margined{
-    margin: 2rem 1.5rem 2rem 2.5rem;
+    margin: 2rem 1.5rem;
 }
 
 .margined-auto{margin:auto;}
