Added columns (looks unstable)

--- a/client/css/scss/_main.scss
+++ b/client/css/scss/_main.scss
@@ -39,7 +39,7 @@ body {
     background-attachment: fixed;
     min-height: 100vh;
     min-width: 100vw;
-    color:$text !important;
+    color:$theme-text !important;
 }
 #app{
     min-height:100vh;
