--- a/client/css/bulma.css
+++ b/client/css/bulma.css
@@ -1,4 +1,64 @@
 @charset "UTF-8";
+/*$primary: #deb75f;
+$theme-bg: #325a5d;
+$theme-panel: #2e5557;
+$theme-text: #ecf0f1;
+$theme-full: #fff;
+$theme-opposite: #34495e;
+$theme-full-opposite: #000;
+$bg-color: $theme-bg;*/
+/*Original*/
+/*
+$black : hsl(0, 0%, 4%);
+$black-bis : hsl(0, 0%, 7%);
+$black-ter : hsl(0, 0%, 14%);
+$grey-darker : hsl(0, 0%, 21%);
+$grey-dark : hsl(0, 0%, 29%);
+$grey : hsl(0, 0%, 48%);
+$grey-light : hsl(0, 0%, 71%);
+$grey-lighter : hsl(0, 0%, 86%);
+$grey-lightest : hsl(0, 0%, 93%);
+$white-ter : hsl(0, 0%, 96%);
+$white-bis : hsl(0, 0%, 98%);
+$white : hsl(0, 0%, 100%);
+
+$orange : hsl(14, 100%, 53%);
+$yellow : hsl(44, 100%, 77%);
+$green : hsl(153, 53%, 53%);
+$turquoise : hsl(171, 100%, 41%);
+$cyan : hsl(207, 61%, 53%);
+$blue : hsl(229, 53%, 53%);
+$purple : hsl(271, 100%, 71%);
+$red : hsl(348, 86%, 61%);
+*/
+/*Inverted*/
+/*$black : hsl(0, 0%, 96%);
+$black-bis : hsl(0, 0%, 93%);
+$black-ter : hsl(0, 0%, 86%);
+$grey-darker : hsl(0, 0%, 79%);
+$grey-dark : hsl(0, 0%, 71%);
+$grey : hsl(0, 0%, 52%);
+$grey-light : hsl(0, 0%, 29%);
+$grey-lighter : hsl(0, 0%, 14%);
+$grey-lightest : hsl(0, 0%, 7%);
+$white-ter : hsl(0, 0%, 4%);
+$white-bis : hsl(0, 0%, 2%);
+$white : hsl(0, 0%, 0%);
+
+$orange : hsl(14, 100%, 53%);
+$yellow : hsl(44, 100%, 77%);
+$green : hsl(153, 53%, 53%);
+$turquoise : hsl(171, 100%, 41%);
+$cyan : hsl(207, 61%, 53%);
+$blue : hsl(229, 53%, 53%);
+$purple : hsl(271, 100%, 71%);
+$red : hsl(348, 86%, 61%);
+*/
+/*
+    primary (golg): #deb75f
+    back: #2e5557
+    back-light : #325a5d
+*/
 /*! bulma.io v0.9.4 | MIT License | github.com/jgthms/bulma */
 /* Bulma Utilities */
 .pagination-previous,
