--- a/client/css/scss/_main.scss
+++ b/client/css/scss/_main.scss
@@ -110,6 +110,9 @@ ul,li { margin:0; padding:0; }
     &.flex-column{
         flex-direction: column;
     }
+    &.nowrap{
+        flex-wrap: nowrap;
+    }
 }
 .centered{
     justify-content: center;
