--- a/client/css/scss/_variables.scss
+++ b/client/css/scss/_variables.scss
@@ -70,32 +70,32 @@ $theme-panel: $light-panel;
 $theme-text: $light-text;
 
 /*SELECTED COLORS*/
-$base : $sui-base;
-$base-light : $sui-base-light;
-$green : $sui-green;
-$green-light : $sui-green-light;
-$blue : $sui-blue;
-$blue-light : $sui-blue-light;
-$red : $sui-red;
-$red-light : $sui-red-light;
-$yellow : $sui-yellow;
-$yellow-light : $sui-yellow-light;
-$orange : $sui-orange;
-$orange-light : $sui-orange-light;
+// $base : $sui-base;
+// $base-light : $sui-base-light;
 $teal : $sui-teal;
 $teal-light : $sui-teal-light;
 $olive : $sui-olive;
 $olive-light : $sui-olive-light;
-$purple : $sui-purple;
-$purple-light : $sui-purple-light;
 $violet : $sui-violet;
 $violet-light : $sui-violet-light;
 $pink : $sui-pink;
 $pink-light : $sui-pink-light;
-$grey : $sui-grey;
-$grey-light : $sui-grey-light;
 $brown : $sui-brown;
 $brown-light : $sui-brown-light;
+// $green : $sui-green;
+// $green-light : $sui-green-light;
+// $blue : $sui-blue;
+// $blue-light : $sui-blue-light;
+// $red : $sui-red;
+// $red-light : $sui-red-light;
+// $yellow : $sui-yellow;
+// $yellow-light : $sui-yellow-light;
+// $orange : $sui-orange;
+// $orange-light : $sui-orange-light;
+// $purple : $sui-purple;
+// $purple-light : $sui-purple-light;
+// $grey : $sui-grey;
+// $grey-light : $sui-grey-light;
 
 $black : $sui-black;
 $black-light : $sui-black-light;
