--- a/client/css/custom.css
+++ b/client/css/custom.css
@@ -1,3 +1,42 @@
+/*COLORS FROM FLAT UI COLOR PALETTE 1*/
+/*COLORS FROM SEMANTIC UI REACT BUTTONS*/
+/*3 COLORS THEME*/
+/*SELECTED COLORS*/
+.carl-wrapper {
+  padding: 3rem;
+}
+.carl-wrapper .ring-outter {
+  position: relative;
+  padding: 2rem;
+}
+.carl-wrapper .ring-outter:before {
+  content: "";
+  border-radius: 50%;
+  z-index: 5;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: inset 0 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2), 0.75rem -0.75rem 1.5rem #ffffff;
+  background: linear-gradient(150deg, #09C6F9, #045DE9);
+  animation: rotate-gradient linear 2s infinite;
+}
+.carl-wrapper .ring-outter .ring-inner {
+  position: relative;
+  z-index: 10;
+  box-shadow: 0.75rem 0.75rem 1.5rem rgba(0, 0, 0, 0.4), inset 0.75rem -0.75rem 1.5rem #ffffff;
+  border-radius: 50%;
+  height: 8rem;
+  aspect-ratio: 1;
+  background-color: hsl(42deg, 45%, 96%);
+}
+
+@keyframes rotate-gradient {
+  to {
+    transform: rotate(360deg);
+  }
+}
 .font-awesome-picker .input.selected-code {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
@@ -164,15 +203,15 @@ a.has-text-white:hover, a.has-text-white:focus {
 }
 
 .has-text-black {
-  color: hsl(0deg, 0%, 4%) !important;
+  color: #1b1c1d !important;
 }
 
 a.has-text-black:hover, a.has-text-black:focus {
-  color: black !important;
+  color: #020303 !important;
 }
 
 .has-background-black {
-  background-color: hsl(0deg, 0%, 4%) !important;
+  background-color: #1b1c1d !important;
 }
 
 .has-text-light {
@@ -540,6 +579,12 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   place-self: stretch;
 }
 
+.home-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 20vh 1fr 20vh;
+  place-items: center;
+}
 .home-container .home-card {
   padding-right: 2rem;
   grid-template-columns: auto 1fr;
@@ -562,6 +607,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
 .home-container .cmp-title-container {
   margin: auto;
   text-align: center;
+  padding-bottom: 4rem;
 }
 .home-container .cmp-title-container .cmp-title {
   font-family: "Montserrat", sans-serif;
@@ -1512,23 +1558,23 @@ input.checkbox {
 }
 
 .fa.green {
-  color: #21ba45;
+  color: hsl(153deg, 53%, 53%);
 }
 
 .fa.blue {
-  color: #2185d0;
+  color: hsl(229deg, 53%, 53%);
 }
 
 .fa.red {
-  color: #db2828;
+  color: hsl(348deg, 86%, 61%);
 }
 
 .fa.yellow {
-  color: #fbbd08;
+  color: hsl(44deg, 100%, 77%);
 }
 
 .fa.orange {
-  color: #f2711c;
+  color: hsl(14deg, 100%, 53%);
 }
 
 .fa.teal {
@@ -1540,7 +1586,7 @@ input.checkbox {
 }
 
 .fa.purple {
-  color: #a333c8;
+  color: hsl(271deg, 100%, 71%);
 }
 
 .fa.violet {
@@ -1552,7 +1598,7 @@ input.checkbox {
 }
 
 .fa.grey {
-  color: #767676;
+  color: hsl(0deg, 0%, 48%);
 }
 
 .fa.brown {
