--- a/client/css/scss/_layout.scss
+++ b/client/css/scss/_layout.scss
@@ -223,6 +223,9 @@
         }
     }
 }
+.info-display .column{
+    align-self: center;
+}
 //REUSABLE
 .basic-crud-search-layout{
     height: 100%;
