--- a/client/css/scss/_main.scss
+++ b/client/css/scss/_main.scss
@@ -61,6 +61,12 @@ ul,li { margin:0; padding:0; }
 .text-center{
     text-align: center;
 }
+.text-start{
+    text-align: start;
+}
+.text-end{
+    text-align: end;
+}
 .children-spaced > *{
     margin-bottom:1rem;
 }
